styles/style.css
/* ... */
@media screen and (min-width: 1200px) {
  .categorias-container img {
    width: 80%;
  }
  .section-categorias {
    padding: 6rem 1rem;
  }
}
/********* footer *******/
.footer {
  background-color: var(--charleston-green);
  padding: 4rem 1rem;
}
.services-wrapper {
  display: flex;
  text-align: center;
  flex-wrap: wrap;
  justify-content: space-around;
  font-family: var(--condensed);
}
.services-container {
  text-align: center;
  width: 45%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0.5rem 1rem;
  margin-bottom: 2rem;
}
.services-container:nth-child(odd) {
  border-right: 1px solid var(--mainWhite);
}
.services-container img {
  width: 40%;
  margin-bottom: 2rem;
}
.services-info {
  color: var(--mainWhite);
}
.services-info h4 {
  text-transform: capitalize;
  margin-bottom: 1rem;
}
.services-info p {
  font-size: 1.4rem;
}
.services-info li {
  font-size: 1.2rem;
  padding: 0.5rem 0;
}
.social-section {
  margin-top: 2rem;
}
.btn-subscribe {
  background-color: var(--flame);
  padding: 0.8rem 2rem;
  font-size: 1.6rem;
  margin: 2rem auto;
  cursor: pointer;
}
.btn-subscribe:hover {
  border: 1px solid var(--flame);
  background-color: transparent;
}
.social-icons {
  font-size: 3rem;
  cursor: pointer;
}
.fab {
  padding: 0 0.5rem;
  transition: var(--transition);
}
.fab:hover {
  transform: scale(1.5);
}
.fa-facebook-square {
  color: var(--facebook);
}
.fa-twitter-square {
  color: var(--twitter);
}
.fa-instagram-square {
  color: var(--instagram);
}
.fa-youtube-square {
  color: var(--youtube);
}
.services-copy-section {
  text-align: center;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  font-family: var(--condensed);
  color: var(--mainWhite);
  margin-top: 1rem;
}
.services-copy {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.services-copy li {
  padding: 0.5rem 1rem;
  font-size: 1.2rem;
}
.hot-keywords {
  color: var(--mainWhite);
  font-family: var(--condensed);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin-top: 2rem;
  text-align: left;
}
.hot-keywords h5 {
  font-size: 1.2rem;
}
.keywords {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
}
.keywords li {
  padding: 0.3rem;
}
@media screen and (min-width: 600px) {
  .services-container:not(:last-child) {
    border-right: 1px solid var(--mainWhite);
  }
  .services-wrapper {
    flex-wrap: nowrap;
  }
}
@media screen and (min-width: 1200px) {
  .services-container img {
    width: 20%;
    margin-bottom: 2rem;
  }
}
/******* general aside *********/
.btn-primary {
  background-color: transparent;
  color: var(--flame);
  padding: 0.7rem 4rem;
  border: 1px solid var(--flame);
  font-family: var(--condensed);
  text-transform: uppercase;
  font-size: 1.6rem;
}
.aside-wrapper {
  min-height: 100vh;
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: var(--mainWhite);
  overflow: auto;
  opacity: 0;
  font-family: var(--condensed);
}
.aside-header {
  position: fixed;
  z-index: 9999;
  top: 0;
  width: 100%;
  background-color: var(--mainWhite);
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 3rem 1rem;
  transition: var(--transition);
  box-shadow: var(--light-shadow);
}
.aside-footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: space-around;
  background-color: var(--mainWhite);
  padding: 2rem;
  transition: var(--transition);

  box-shadow: var(--light-top-shadow);
}

/*******sidebar*******/
.sidebar-wrapper {
  left: -2000px;
  opacity: 0;
  box-shadow: var(--right-shadow);
  transition: var(--transition-ease);
}

.sidebar-content {
  background-color: var(--mainWhite);
  min-height: 100vh;
  padding: 12rem 1rem;
}

.sidebar-wrapper.show {
  opacity: 1;
  left: 0;
}

.sidebar-menu {
  cursor: pointer;
  text-transform: capitalize;
  margin: 2rem 0;
  padding: 1rem 2rem;
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 2rem;
  align-items: center;
}

.sidebar-menu img {
  width: 50px;
  height: auto;
  object-fit: cover;
  border-radius: var(--radius);
}
.sidebar-items {
  padding: 1rem 2rem;
  font-size: 2rem;
  border-top: 1px solid var(--battleship-grey);
  cursor: pointer;
}
.sidebar-items li {
  transition: var(--transition);
}
.sidebar-items li:hover {
  padding-left: 1.8rem;
}
.sidebar-title {
  margin-top: 2rem;
}
.sidebar-title h3 {
  font-size: 2.4rem;
}
.more-info {
  cursor: pointer;
}
.more-info ul {
  font-size: 1.6rem;
}
.more-info ul li {
  transition: var(--transition);
}
.more-info ul li:hover {
  padding-left: 1.8rem;
}
.underline {
  margin-bottom: 2rem;
  width: 80px;
  height: 1px;
  background-color: var(--charleston-green);
}
@media screen and (min-width: 600px) {
  .aside-wrapper,
  .aside-header,
  .aside-footer {
    width: 600px;
  }
}
@media screen and (min-width: 900px) {
  .sidebar-wrapper,
  .sidebar-header,
  .sidebar-footer {
    display: none;
  }
}

/******** cart ******/
.cart-wrapper {
  right: -2000px;
  transition: var(--transition-ease);
  box-shadow: var(--left-shadow);
  background-color: var(--mainWhite);
  opacity: 0;
}
.cart-wrapper.show {
  opacity: 1;
  right: 0;
}
.cart-content {
  background-color: var(--mainWhite);
  min-height: 100vh;
  padding: 12rem 1rem;
  display: flex;
  flex-direction: column;
}

.cart-item {
  margin: 1rem 0;
  padding: 0 1rem;
  display: grid;
  grid-template-columns: auto 1fr auto;
  column-gap: 2rem;
  align-items: center;
}
.cart-item-img {
  width: 75px;
  height: 75px;
  object-fit: cover;
  border-radius: var(--radius);
}
.cart-item-name {
  margin-bottom: 0.15rem;
}
.cart-item-price {
  margin-bottom: 0;
  font-size: 1.8rem;
}
/* ... */

